fixed: skipped question counter still shows in the results page, not its behind a feature flag

--- a/src/routes/quiz/results/page.sass
+++ b/src/routes/quiz/results/page.sass
@@ -89,7 +89,7 @@
                         align-items: center
                         justify-content: center
                         gap: 5px
-                        width: 100%
+                        width: 50%
                         svg
                             width: 33%
                         span
